# reachy-rocky

./: .gitignore  CLAUDE.md  LICENSE  Package.swift  README.md
OnBot/rocky_media_relay/: README.md  index.html  pyproject.toml
OnBot/rocky_media_relay/rocky_media_relay/: main.py  motion_guard.py
Sidecars/brain/: manifest.json  pyproject.toml  setup.sh
Sidecars/brain/rocky_brain/: __init__.py  runner.py
Sidecars/echo/: manifest.json  runner.py
Sidecars/face-tracker/: manifest.json  pyproject.toml  setup.sh
Sidecars/face-tracker/rocky_face_tracker/: __init__.py  controller.py  detector_synthetic.py  filters.py  geometry.py  runner.py
Sidecars/mempalace/: manifest.json  pyproject.toml  setup.sh
Sidecars/mempalace/rocky_mempalace/: runner.py
Sidecars/mlx-stt/: manifest.json  pyproject.toml  setup.sh
Sidecars/mlx-stt/rocky_mlx_stt/: __init__.py  runner.py
Sidecars/mlx-tts/: manifest.json  pyproject.toml  setup.sh
Sidecars/mlx-tts/rocky_tts/: __init__.py  backends.py  chatterbox_backend.py  fish_tts_backend.py  qwen3_tts_backend.py  runner.py
Sidecars/robot-camera/: manifest.json  pyproject.toml  setup.sh
Sidecars/robot-camera/rocky_robot_camera/: __init__.py  runner.py
Sidecars/robot-mic/: manifest.json  pyproject.toml  setup.sh
Sidecars/robot-mic/rocky_robot_mic/: __init__.py  runner.py
Sources/Cognition/: BrainBackend.swift  ChatTypes.swift  CognitionEngine.swift  FastPath.swift  JSONValue.swift  LMStudioBrain.swift  LMStudioClient.swift  MLXVLMBrain.swift  SSEParser.swift  ToolRegistry.swift
Sources/Memory/: MemoryService.swift
Sources/Perception/: FaceLibrary.swift  MacFaceTracker.swift
Sources/RobotLink/: MediaClient.swift  MotionGuard.swift  RobotEndpoint.swift  RobotLinkClient.swift  StateSubscriber.swift  TargetStreamer.swift
Sources/Rocky/: AppServices.swift  BatteryService.swift  BrainCard.swift  CommandPalette.swift  FaceTargetSnapshot.swift  HeroCard.swift  HotkeyMonitor.swift  LogsView.swift  MenuBarStatusView.swift  MicCalibrationView.swift  MotionCard.swift  RockyApp.swift  RootView.swift  SettingsComponents.swift  SettingsStore.swift  SettingsView.swift  StatusView.swift  VisionCard.swift  VoiceCard.swift
Sources/Rocky/Cockpit/: CockpitView.swift  ConversationView.swift  MomentStrip.swift  PortraitView.swift
Sources/Rocky/Inspector/: ActivityTab.swift  InspectorView.swift  MemoryTab.swift  ProfileTab.swift
Sources/Rocky/Onboarding/: BotConnectingOverlay.swift  FirstRunOverlay.swift
Sources/Rocky/Permissions/: PermissionsAuthority.swift
Sources/Rocky/Resources/ReachyMini/: reachy_mini.urdf
Sources/Rocky/Tools/: CalendarTool.swift  LocationProvider.swift  LookAtTool.swift  RecallMemoryTool.swift  RememberTool.swift  TimeTool.swift  WeatherTool.swift  WebSearchTool.swift
Sources/Rocky/UI/: BatteryChip.swift  Card.swift  ReachyHead3D.swift  ReachyMini.swift  ReachyMiniAvatar.swift  RockyAvatar.swift  StewartIK.swift
Sources/RockyKit/: Pose.swift  RPYPose.swift  RobotState.swift  SafetyLimits.swift  Units.swift
Sources/SidecarHost/: FirstRunSetup.swift  JSONLineCodec.swift  Sidecar.swift  SidecarManifest.swift  SidecarRuntime.swift  SidecarState.swift  SidecarSupervisor.swift
Sources/Telemetry/: LogBus.swift  Moment.swift  MomentFeed.swift  TelemetryEvent.swift  TurnProfiler.swift
Sources/Vision/: FaceTargetBridge.swift  FaceTrackerService.swift  RobotCameraService.swift
Sources/Voice/: AddressFilter.swift  AppleSpeechSTT.swift  AudioRingBuffer.swift  EnergyVAD.swift  MLXWhisperSTT.swift  MicService.swift  RacingSTT.swift  RobotMicService.swift  RobotTTS.swift  STTEngine.swift  SileroVAD.swift  StreamingTTS.swift  VoiceCoordinator.swift  WakeFilter.swift  WakeWordEngine.swift  WhisperKitSTT.swift
Tests/CognitionTests/: FastPathTests.swift  FencedToolCallTests.swift  JSONValueTests.swift  LookAtMathTests.swift  SSEParserTests.swift  ToolRegistryTests.swift
Tests/RobotLinkTests/: RobotEndpointTests.swift
Tests/RockyKitTests/: PoseTests.swift
Tests/SidecarHostTests/: EchoSidecarIntegrationTests.swift  FaceTrackerSidecarIntegrationTests.swift  JSONLineCodecTests.swift
Tests/VisionTests/: FaceTrackerServiceTests.swift
Tests/VoiceTests/: AddressFilterTests.swift  AudioRingBufferTests.swift  EnergyVADTests.swift  SileroVADTests.swift  VoiceCoordinatorTests.swift  WakeFilterTests.swift
docs/: README.md  WIKI.md  index.md  log.md
docs/.obsidian/: workspace.json
docs/concepts/: address-filter.md  app-lifecycle.md  app-services.md  architecture-diagram.md  architecture.md  brain-sidecar.md  cockpit-design.md  coordinate-frames.md  face-tracker.md  fast-path.md  hermes-agent.md  media-architecture.md  memory.md  motion-guard.md  motion-philosophy.md  on-bot-media-relay.md  permissions-authority.md  portrait.md  rocky-architecture.md  safety-limits.md  sidecar-convention.md  sidecar-supervisor.md  state-subscription.md  telemetry-pipeline.md  tools-registry.md  tts-engines.md  voice-pipeline.md
docs/decisions/: 0001-target-platform.md  0002-rocky-app.md  0003-sidecar-convention.md  0004-hermes-agent-integration.md  0005-brain-backend-protocol.md  0006-on-bot-media-relay.md
docs/patterns/: control-loop.md  direct-hardware.md  recorded-moves.md
docs/reference/: application-support-layout.md  glossary.md  hardware.md  motors.md  power-monitoring.md  sdk-python.md  settings-store.md
docs/sources/: agents-md.md  daemon-openapi-1.7.1.md  hf-docs.md
docs/workflows/: create-app.md  deploy-media-relay.md  dev-loop-wireless.md  integrate-hermes-agent.md  run-and-debug.md
scripts/: _hf_fetch.py  build-app.sh  deploy-media-relay.sh  download-models.sh  run.sh
