[project]
name = "rocky-face-tracker"
version = "0.1.0"
description = "Rocky face-tracker sidecar — synthetic-target test scaffold (Lissajous + 50 Hz CriticalDamper). Real face tracking is Swift-side in Sources/Perception/MacFaceTracker.swift; the [sam] mode here is an unimplemented stub."
requires-python = ">=3.12"
dependencies = []

# Real-robot dependencies are gated behind extras so M3a (synthetic detector)
# stays stdlib-only and installable on machines without MLX / Reachy Mini.
[project.optional-dependencies]
sam = [
    "mlx>=0.18",
    "mlx-vlm>=0.1",
    "numpy>=1.26",
    "pillow>=10",
]
robot = [
    "reachy-mini>=1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocky_face_tracker"]
