[project]
name = "rocky-mlx-tts"
version = "0.1.0"
description = "Rocky TTS sidecar — voice-cloned speech synthesis under the Sidecar contract"
requires-python = ">=3.12"
dependencies = []  # `say` placeholder needs no Python deps

# F5-TTS-MLX integration ships in a follow-up commit. Until the user provides
# a voice reference, the `say` backend uses macOS's bundled TTS so the wire
# protocol can be exercised end-to-end.
[project.optional-dependencies]
mlx = [
    "mlx>=0.18",
    "f5-tts-mlx>=0.2",
    "soundfile>=0.12",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocky_tts"]
