[project]
name = "rocky-robot-mic"
version = "0.1.0"
description = "Streams the Reachy Mini onboard microphone array to Rocky over the Sidecar wire."
requires-python = ">=3.12"
dependencies = [
    "reachy-mini>=1.7",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocky_robot_mic"]
