[project]
name = "rocky-robot-mic"
version = "0.2.0"
description = "Streams the Reachy Mini onboard microphone array to Rocky over the Sidecar wire. v0.2 swaps the WebRTC media client for a WebSocket subscriber that consumes the on-bot rocky_media_relay app — bypasses the WebRTC stack entirely, which has been unreliable on WiFi."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "websockets>=12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocky_robot_mic"]
